@@ -94,6 +94,10 @@ Portuguese (Brazil) translation
 mail: marciopanto@gmail.com
 Italy
  
+Mingye Wang 
+Chinese (China) translation
+Wilton, CT, USA
+ 
 Yaron Shahrabani 
 Hebrew translation
 mail: sh.yaron@gmail.com
