@@ -164,6 +164,10 @@ translations:
           mail: marciopanto@gmail.com
           location: Italy
 
+        - name: Mingye Wang
+          info: Chinese (China) translation
+          location: Wilton, CT, USA
+
         - name: Yaron Shahrabani
           info: Hebrew translation
           mail: sh.yaron@gmail.com
